@@ -18,39 +18,50 @@ package com.android.server.healthconnect.storage.request;
 
 import static com.google.common.truth.Truth.assertThat;
 
+import static org.junit.Assert.assertThrows;
+
 import androidx.test.ext.junit.runners.AndroidJUnit4;
 
 import org.junit.Test;
 import org.junit.runner.RunWith;
 
-import java.util.Collections;
+import java.util.List;
 
 @RunWith(AndroidJUnit4.class)
 public class CreateIndexRequestTest {
-    private static final String TABLE_NAME = "sample_table";
-    private static final String INDEX_NAME = "index_column";
-    private static final String COLUMN_NAME = "sample_column";
-    private static final String UNIQUE = "UNIQUE";
 
     @Test
-    public void testCreateIndex_getCommandWithUnique() {
+    public void testCreateIndexGetCommand_withUnique() {
         CreateIndexRequest createIndexRequest =
-                new CreateIndexRequest(
-                        TABLE_NAME, INDEX_NAME, true, Collections.singletonList(COLUMN_NAME));
-        assertThat(createIndexRequest.getCommand()).contains(TABLE_NAME);
-        assertThat(createIndexRequest.getCommand()).contains(INDEX_NAME);
-        assertThat(createIndexRequest.getCommand()).contains(COLUMN_NAME);
-        assertThat(createIndexRequest.getCommand()).contains(UNIQUE);
+                new CreateIndexRequest("sample_table", "sample_idx", true, List.of("col1"));
+
+        assertThat(createIndexRequest.getCommand())
+                .isEqualTo("CREATE UNIQUE INDEX sample_idx ON sample_table (col1)");
     }
 
     @Test
-    public void testCreateIndex_getCommandWithoutUnique() {
+    public void testCreateIndexGetCommand_withoutUnique() {
+        CreateIndexRequest createIndexRequest =
+                new CreateIndexRequest("sample_table", "sample_idx", false, List.of("col1"));
+
+        assertThat(createIndexRequest.getCommand())
+                .isEqualTo("CREATE INDEX sample_idx ON sample_table (col1)");
+    }
+
+    @Test
+    public void testCreateIndexGetCommand_uniqueMultipleColumns() {
         CreateIndexRequest createIndexRequest =
                 new CreateIndexRequest(
-                        TABLE_NAME, INDEX_NAME, false, Collections.singletonList(COLUMN_NAME));
-        assertThat(createIndexRequest.getCommand()).contains(TABLE_NAME);
-        assertThat(createIndexRequest.getCommand()).contains(INDEX_NAME);
-        assertThat(createIndexRequest.getCommand()).contains(COLUMN_NAME);
-        assertThat(createIndexRequest.getCommand()).doesNotContain(UNIQUE);
+                        "sample_table", "sample_idx", true, List.of("col1", "col2", "col3"));
+
+        assertThat(createIndexRequest.getCommand())
+                .isEqualTo("CREATE UNIQUE INDEX sample_idx ON sample_table (col1, col2, col3)");
+    }
+
+    @Test
+    public void testCreateIndexGetCommand_uniqueNoColumns() {
+        assertThrows(
+                IllegalArgumentException.class,
+                () -> new CreateIndexRequest("sample_table", "sample_idx", true, List.of()));
     }
 }
